// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-integerfield Autocomplete 1`] = `
<div
  class="m-input-style m-integerfield m--is-tag-default"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            autocomplete="home tel-extension"
            class="m-integerfield__input"
            id="mIntegerfield-fakeId"
            inputmode="decimal"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-integerfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-integerfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-integerfield Error 1`] = `
<div
  class="m-input-style m-integerfield m--has-error m--has-validation-message m--is-tag-default"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            aria-invalid="true"
            class="m-integerfield__input"
            id="mIntegerfield-fakeId"
            inputmode="decimal"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-integerfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-integerfield__validation-message"
      >
        <p
          aria-live="polite"
          class="m-validation-message__error"
        >
          <svg
            class="m-svg m-validation-message__icon"
            height="1em"
            width="1em"
          >
            <title>
              Erreur
            </title>
          </svg>
           
          <span
            class="m-validation-message__text"
          >
            Invalide number
          </span>
        </p>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-integerfield Label 1`] = `
<div
  class="m-input-style m-integerfield m--has-label m--is-tag-default"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <label
        class="m-input-style__label"
        for="mIntegerfield-fakeId"
        style="margin-right: 0px;"
      >
        <span
          class="m-input-style__text"
        >
          <span>
            Extension
          </span>
           
          <!---->
        </span>
      </label>
       
      <div
        class="m-input-style__input"
      >
        <!---->
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            class="m-integerfield__input"
            id="mIntegerfield-fakeId"
            inputmode="decimal"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-integerfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-integerfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-integerfield Readonly 1`] = `
<div
  class="m-input-style m-integerfield m--is-readonly m--is-tag-default"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            class="m-integerfield__input"
            id="mIntegerfield-fakeId"
            inputmode="decimal"
            readonly="readonly"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-integerfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-integerfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-integerfield Value 1`] = `
<div
  class="m-input-style m-integerfield m--has-value m--is-tag-default"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            class="m-integerfield__input"
            id="mIntegerfield-fakeId"
            inputmode="decimal"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-integerfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-integerfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-integerfield Waiting 1`] = `
<div
  class="m-input-style m-integerfield m--is-waiting m--is-tag-default"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            class="m-integerfield__input"
            id="mIntegerfield-fakeId"
            inputmode="decimal"
            readonly="readonly"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <div
            class="m-spinner m-input-style__spinner"
          >
            <!---->
             
            <div />
          </div>
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-integerfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-integerfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-integerfield default 1`] = `
<div
  class="m-input-style m-integerfield m--is-tag-default"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style__main"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <input
            aria-describedby="fakeId"
            class="m-integerfield__input"
            id="mIntegerfield-fakeId"
            inputmode="decimal"
          />
             
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
    
  <div
    class="m-input-style__validation"
  >
    <div
      class="m-integerfield__validation"
      id="fakeId"
    >
      <div
        class="m-validation-message m-integerfield__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;
